src/test/ui/parser/keyword-mod-as-identifier.stderr
error: expected identifier, found keyword `mod`
  --> $DIR/keyword-mod-as-identifier.rs:4:9
   |
LL |     let mod = "foo";
   |         ^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#mod = "foo";
   |         ^^^^^

error: aborting due to previous error

